tests/ui/traits/next-solver/undeclared-lifetime-no-ice-issue-151461.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/undeclared-lifetime-no-ice-issue-151461.rs:13:33
   |
LL |     for<'b> <Self as X<'b>>::U: 'a,
   |                                 ^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'a` lifetime
   |
LL |     for<'a, 'b> <Self as X<'b>>::U: 'a,
   |         +++
help: consider introducing lifetime `'a` here
   |
LL | impl<'a> X<'_> for u32
   |     ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0261`.
